<resources>
    <!--Generic strings-->
    <string name="account_number_field">Account number</string>
    <string name="password_text">Password</string>
    <string name="login_button_label">Login</string>
    <string name="create_account_button_label">Create Account</string>
    <string name="name_text">Your Name</string>

    <!--Only login screen-->
    <string name="login_error">Wrong account number or password.</string>
    <string name="account_number_missing">Please insert your account number.</string>
    <string name="password_missing">Please insert your password.</string>
    <string name="app_name">Bank Account App</string>

    <!--Only create account screen-->
    <string name="your_account_number">Your account number will be:</string>
    <string name="create_your_account">Create your account</string>
    <string name="choose_account_type">Choose your account type</string>
    <string name="field_warning">Please fill all the fields.</string>
    <string name="radio_button_warning">Please select the account type.</string>
    <string name="initial_deposit">Initial deposit: 0,00</string>
    <string name="create_account_success">Account created successfully!</string>
    <string name="same_account_type">You cannot have two of the same account type.</string>

    <!--Account type-->
    <string name="savings_account">Savings Account</string>
    <string name="current_account">Current Account</string>

    <!--Money Code-->
    <string name="brl">BRL</string>

    <!--Only User Account screen-->
    <string name="soon_warning">SOON</string>
    <string name="log_out">Logout</string>
    <string name="creation_date">Creation date:</string>
    <string name="transfer_error">An error occurred while transferring, please try again later.</string>
    <string name="withdraw_error">You dont have enough money to withdraw.</string>
    <string name="transfer_enough_amount">You dont have enough money to transfer.</string>
    <string name="deposit_complete">Deposit completed successfully!</string>
    <string name="withdraw_complete">Withdraw completed successfully!</string>
    <string name="transfer_complete">Transfer completed successfully!</string>

    <!--Deposit Withdraw-->
    <string name="amount">Amount</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit</string>
    <string name="amount_warning">Please inform the amount you want to</string>

    <!-- Transfer -->
    <string name="transfer">Transfer</string>
    <string name="account_to_transfer">Account number to transfer</string>
    <string name="no_id_warning">No user account ID is provided for the transfer.</string>
    <string name="transfer_amount_zero">Please provide an amount for the transfer.</string>
    <string name="account_missing">This account ID doesnt exist.</string>

    <!-- Grid views names -->
    <string name="grid_deposit">Deposit</string>
    <string name="grid_withdraw">Withdraw</string>
    <string name="grid_transfer">Transfer</string>
    <string name="grid_transaction">Transaction</string>
    <string name="grid_investments">Investments</string>

    <!-- Nav graph labels -->
    <string name="nav_login">Login</string>
    <string name="nav_create_account">Create Account</string>
    <string name="nav_services">Services</string>
    <string name="nav_deposit">Deposit</string>
    <string name="nav_withdraw">Withdraw</string>
    <string name="nav_transfer">Transfer</string>
    <string name="nav_transactions">Transactions</string>

    <!-- Bottom navigation -->
    <string name="services">Services</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>

    <!-- Tic Tac Toe -->
    <string name="player1_round">Player 1</string>
    <string name="player2_round">Player 2</string>
    <string name="machine_round">Machine</string>
    <string name="round">round</string>
    <string name="x_wins">X WINS!</string>
    <string name="o_wins">O WINS!</string>
    <string name="draw">DRAW</string>
    <string name="retry">Retry</string>

    <!-- Transaction -->
    <string name="no_transaction">No transactions made yet.</string>
</resources>