<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    tools:context=".fragments.CreateAccountFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_account_number"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/accountCreation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:clickable="false" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginBottom="25dp" />

    <EditText
        android:id="@+id/nameCreation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:inputType="text"
        android:hint="@string/name_text" />

    <EditText
        android:id="@+id/passwordCreation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="25dp"
        android:inputType="textPassword"
        android:hint="@string/password_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_account_type"
        android:textSize="16sp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         >

        <RadioButton
            android:id="@+id/chooseSavings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/savings_account"/>

        <RadioButton
            android:id="@+id/chooseCurrent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_account"/>

    </RadioGroup>

    <EditText
        android:id="@+id/initialDeposit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:maxLength="15"
        android:inputType="number"
        android:hint="@string/initial_deposit"
        android:autofillHints="null" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray_blue"
        android:text="@string/create_account_button_label"
        android:clickable="true"
        android:focusable="true"/>

</LinearLayout>