<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="30dp"
    android:paddingStart="30dp"
    android:gravity="center"
    tools:context=".TransferFragment">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="50dp"
        android:text="@string/transfer"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/accountId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/account_to_transfer" />

    <EditText
        android:id="@+id/transferAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:inputType="number"
        android:hint="@string/amount" />

    <Button
        android:id="@+id/confirmOperationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transfer"/>

</LinearLayout>